--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "bootstrap-icons": "^1.8.1",
     "classnames": "^2.3.1",
     "next": "12.1.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
+    "react-bootstrap-icons": "^1.7.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
