--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "bootstrap-icons": "^1.8.1",
     "classnames": "^2.3.1",
+    "framer-motion": "^6.3.0",
     "next": "12.1.0",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
@@ -23,6 +24,8 @@
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.7",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23"
   }
 }
