--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@reduxjs/toolkit": "^1.8.1",
     "bootstrap-icons": "^1.8.1",
     "classnames": "^2.3.1",
     "framer-motion": "^6.3.0",
@@ -17,7 +18,8 @@
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-bootstrap-icons": "^1.7.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^8.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
