--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "17.0.2",
     "react-bootstrap-icons": "^1.7.2",
     "react-dom": "17.0.2",
-    "react-redux": "^8.0.0"
+    "react-redux": "^8.0.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
