--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bootstrap-icons": "^1.8.1",
     "classnames": "^2.3.1",
     "framer-motion": "^6.3.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.0",
+    "next-auth": "^4.6.1",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-bootstrap-icons": "^1.7.2",
