--- a/.env.local
+++ b/.env.local
@@ -4,8 +4,9 @@ NEXTAUTH_SECRET=abc
 #Publiczny dostep do api woocommerce przez użytkownka customer
 #https://woocommerce.github.io/woocommerce-rest-api-docs/#authentication
 
-STORE_CUSTOMER_KEY=ck_66901cb4e4f57e060aeda1eef33e08375e787c83
-STORE_CUSTOMER_SECRET=cs_882f87fa14c4e9262a6b150fdf1e7b0433c48737
+STORE_URL=http://localhost:8080
+STORE_CUSTOMER_KEY=ck_1722fb1c223d5a9eb7361693f5c384d4ff747379
+STORE_CUSTOMER_SECRET=cs_29fbf18aca0cdf36b0098d552ee3d659e11ebae5
 
 APPLE_ID=
 APPLE_TEAM_ID=
