--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: '3.1'
 
 services:
 
-  wordpress:
-    image: cameolon/wordpress
+  wp:
+    image: cameolon/server:wordpress
     restart: always
     ports:
       - 8080:80
@@ -13,11 +13,12 @@ services:
       WORDPRESS_DB_PASSWORD: examplepass
       WORDPRESS_DB_NAME: exampledb
     volumes:
-      - ./wordpress:/var/www/html
+      - ./server/wordpress:/var/www/html
+      - ./server/plugins:/var/www/html/wp-content/plugins
     #command: chown -Rf cameolon:cameolon /var/www/html/wp-content && chmod -R a=r,u+w,a+X /var/www/html/wp-content
 
   db:
-    image: cameolon/mysql:5.7
+    image: cameolon/server:mysql
     restart: always
     environment:
       MYSQL_DATABASE: exampledb
@@ -28,5 +29,8 @@ services:
       - db:/var/lib/mysql
 
 volumes:
-  wordpress:
+  wp:
   db:
+  db_data: {}
+  wordpress_data:
+    driver: local
