--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "bootstrap-icons": "^1.8.1",
     "classnames": "^2.3.1",
+    "crypto-js": "^4.1.1",
     "framer-motion": "^6.3.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.0",
