--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.1",
     "bootstrap-icons": "^1.8.1",
     "classnames": "^2.3.1",
     "crypto-js": "^4.1.1",
     "framer-motion": "^6.3.0",
+    "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.0",
     "next-auth": "^4.6.1",
