--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.1.1",
     "framer-motion": "^6.3.0",
     "graphql": "^16.5.0",
+    "hashids": "^2.2.10",
     "jsonwebtoken": "^8.5.1",
     "next": "12.1.0",
     "next-auth": "^4.6.1",
